--- a/src/components/ContactForm.module.css
+++ b/src/components/ContactForm.module.css
@@ -1,3 +1,16 @@
+.container {
+  height: 100vh;
+  max-width: 1200px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  font-size: 40;
+  color: #010101;
+  padding: 40px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .contactsWrapper {
   display: flex;
   flex-direction: column;
